--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
   - sudo apt-get install libpcre3-dev julia -y
   - sudo apt-get install postgresql -y
 script:
-  - julia -e 'Pkg.init(); run(`ln -s $(pwd()) $(Pkg.dir("PostgreSQL"))`); Pkg.pin("PostgreSQL"); Pkg.resolve()'
+  - julia -e 'Pkg.init(); run(`ln -s $(pwd()) $(Pkg.dir("PostgreSQL"))`); Pkg.pin("PostgreSQL"); Pkg.resolve(); Pkg.clone("https://github.com/JuliaDB/DBI.jl"); Pkg.checkout("DataFrames", "jmw/symbols")'
   - julia -e 'using PostgreSQL; @assert isdefined(:PostgreSQL); @assert typeof(PostgreSQL) === Module'
   - julia --code-coverage test/runtests.jl
 after_success:
