--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,5 @@ script:
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
   - julia -e 'Pkg.clone(pwd()); Pkg.clone("https://github.com/JuliaDB/DBI.jl")'
   - julia -e 'using PostgreSQL; @assert isdefined(:PostgreSQL); @assert typeof(PostgreSQL) === Module'
-  - julia -e 'Pkg.test("PostgreSQL; coverage=true)'
+  - julia -e 'Pkg.test("PostgreSQL"; coverage=true)'
   - julia -e 'cd(Pkg.dir("PostgreSQL")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
