--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,16 @@
 language: julia
+sudo: false
 os:
   - osx
   - linux
+addons:
+  apt:
+    packages:
+      - postgresql
 julia:
   - release
 notifications:
   email: false
-before_install:
-  - sudo apt-get install postgresql -y
 script:
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
   - julia -e 'Pkg.clone(pwd()); Pkg.clone("https://github.com/JuliaDB/DBI.jl")'
