--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ script:
   - julia -e 'using PostgreSQL; @assert isdefined(:PostgreSQL); @assert typeof(PostgreSQL) === Module'
   - julia -e 'Pkg.test("PostgreSQL"; coverage=true)'
 after_success:
-  - julia -e 'cd(Pkg.dir("MyPkg")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
+  - julia -e 'cd(Pkg.dir("PostgreSQL")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
   - julia -e 'cd(Pkg.dir("PostgreSQL")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(process_folder())'
